# protoc-gen-jsonschema

./: .bazelrc  .gitignore  .gitmodules  ArrayOfEnums.jsonschema  BUILD.bazel  Makefile  README.md  WORKSPACE  deps.bzl  generate-samples.sh  go.mod  go.sum  main.go  main_test.go  options.pb.go  options.proto  protoc-gen-jsonschema.go  protoc_gen_jsonschema_test.go
cmd/protoc-gen-jsonschema/: BUILD.bazel  main.go
jsonschema/: converter.go
jsonschemas/: ArrayOfEnums.json  ArrayOfEnums.jsonschema  ArrayOfMessages.json  ArrayOfMessages.jsonschema  ArrayOfObjects.json  ArrayOfObjects.jsonschema  ArrayOfPrimitives.json  ArrayOfPrimitives.jsonschema  BigInts.jsonschema  BigIntsAllowStrings.jsonschema  CustomFileExtention.jsonschema  EnumOptions.json  Enumception.json  Enumception.jsonschema  FieldOptions.json  FileOptions.json  FirstEnum.json  FirstMessage.json  FirstMessage.jsonschema  GoogleInt64ValueAllowNull.json  GoogleValue.json  GoogleValue.jsonschema  HiddenFields.jsonschema  ImportedEnum.json  JSONFields.json  JSONFields.jsonschema  Maps.json  Maps.jsonschema  MessageKind10.json  MessageKind10.jsonschema  MessageKind11.json  MessageKind11.jsonschema  MessageKind12.json  MessageKind12.jsonschema  MessageOptions.json  MessageWithComments.json  MessageWithComments.jsonschema  NestedMessage.json  NestedMessage.jsonschema  NestedObject.json  (+32 more)
testdata/: array_of_objects.go  array_of_primitives.go  big_ints.go  big_ints_allow_strings.go  camel_case.go  enum_ception.go  first_message.go  imported_enum.go  payload_message.go  second_enum.go  second_message.go  (+1 more)
(+121 files in other folders)
