load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-jsonschema_lib",
    srcs = ["main.go"],
    importpath = "github.com/ikstewa/protoc-gen-jsonschema/cmd/protoc-gen-jsonschema",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/converter",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-jsonschema",
    embed = [":protoc-gen-jsonschema_lib"],
    visibility = ["//visibility:public"],
)
